Fix about and coming soon on mobile

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -25,5 +25,28 @@
 .about-bottom
 {
 	padding-top: 2%;
-	padding-bottom: 2%;
+	padding-bottom: 5%;
+}
+
+.big-text
+{
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+}
+.btn-about
+{
+	width: 25%;
+}
+
+@media only screen and (max-width: 800px)
+{
+	.big-text
+	{
+		width: 90%;
+	}
+	.btn-about
+	{
+		width: 50%;
+	}
 }
